// Code generated by ExtendedBatchMigrator. DO NOT EDIT.
// Batch: BASIC_OTHER
// Generated: 2026-02-12 20:33:32

syntax = "proto3";

package dnf.v1;

option java_multiple_files = true;
option java_outer_classname = "BASIC_OTHERProto";
option java_package = "com.dnfm.mina.protobuf.basic_other";


message CompleteQuestMessage {
}

message AdventurebookRewardMessage {
}

message AdventurebookUpdateConditionMessage {
}

message DungeonResultMessage {
}

message RetryDungeonAtMultiMessage {
}

message RequestToReEnterDungeonMessage {
}

message RequestToReEnterAcceptDungeonMessage {
}

message ControlGroupMessage {
}

message SuggestMovePartyMessage {
}

message ContentsNotifyRemoveMessage {
}
